:sparkles: create interactive map

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>D3.js Essential Training for Data Scientists</title>
-		<link rel="stylesheet" type="text/css" href="style.css" >
-        <script src="//d3js.org/d3.v4.js"></script>
-	</head>
-
-	<body>
-		<script type="text/javascript" src="map_indonesia.js"></script>
-    </body>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://d3js.org/d3.v5.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="styles.css">
+  <title>Indonesian Ancestor Statues</title>
+</head>
+<body>
+  <h3 id="map__text">Select an area</h3>
+  <div id="btn-zoom">
+    <i id="btn-zoom--in" class="fa fa-search-plus fa-2x" aria-hidden="true"></i>
+    <i id="btn-zoom--out"class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
+  </div>
+  <div id="map__container"></div>
+  <script src="map.js"></script>
+</body>
 </html>
