--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://d3js.org/d3.v5.js"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="styles.css">
   <title>Indonesian Ancestor Statues</title>
 </head>
 <body>
-  <h3 id="map__text">Select an area</h3>
-  <div id="btn-zoom">
-    <i id="btn-zoom--in" class="fa fa-search-plus fa-2x" aria-hidden="true"></i>
-    <i id="btn-zoom--out"class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
+  <header>
+      <a href="http://www.volkenkunde.nl/"><img src="./assets/logo-volkenkunde.svg" alt="logo volkenkunde" class="logo"></a>
+      <div class="header-message-block">
+          <span class="message">Indonesian Ancestor Statues</span>
+      </div>
+  </header>
+  <div id="map_container"></div>
+  <div id="map_header">
+    <h3 id="map_text">Select an area</h3>
+    <div>
+      <i id="btn-zoom--in" class="fa fa-search-plus fa-2x" aria-hidden="true"></i>
+      <i id="btn-zoom--out"class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
+    </div>
   </div>
-  <div id="map__container"></div>
   <script src="map.js"></script>
 </body>
 </html>
