--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <i id="btn-zoom--out"class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
     </div>
   </div>
+  <div class="info"></div>
   <script src="map.js"></script>
 </body>
 </html>
